{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 53,
  "lineage": "b3b3c1de-9138-729a-daa1-5c8f6748d0e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07c3fe1ad930c59c9",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-224-102-86.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.102.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:internet-gateway/igw-02eb5e76285c810b5",
            "id": "igw-02eb5e76285c810b5",
            "owner_id": "683326455360",
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c3fe1ad930c59c9",
            "id": "nat-0cd77337080a5bc4b",
            "network_interface_id": "eni-00b9737c7fe72cc26",
            "private_ip": "10.200.0.24",
            "public_ip": "18.224.102.86",
            "subnet_id": "subnet-05edee9f4d225225d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c703f2fc60db4171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd77337080a5bc4b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c703f2fc60db417",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02eb5e76285c810b5",
            "id": "r-rtb-00699cde9e961a2f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00699cde9e961a2f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c703f2fc60db417",
            "owner_id": "683326455360",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02eb5e76285c810b5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "core-vpc Private route table"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00699cde9e961a2f6",
            "owner_id": "683326455360",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02eb5e76285c810b5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "core-vpc Public route table"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdc01328537ffac7",
            "route_table_id": "rtb-08c703f2fc60db417",
            "subnet_id": "subnet-057a7458397040b90"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef7affa5466bd864",
            "route_table_id": "rtb-08c703f2fc60db417",
            "subnet_id": "subnet-0d717ca9cc33d078e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034c9d3abf2f9dd06",
            "route_table_id": "rtb-08c703f2fc60db417",
            "subnet_id": "subnet-0113fa9fdd85de07c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a771f7177720ff9f",
            "route_table_id": "rtb-00699cde9e961a2f6",
            "subnet_id": "subnet-05edee9f4d225225d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021fa360a6c974084",
            "route_table_id": "rtb-00699cde9e961a2f6",
            "subnet_id": "subnet-0277e0458a520598e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca7b9152540f11d0",
            "route_table_id": "rtb-00699cde9e961a2f6",
            "subnet_id": "subnet-0f128cdf225523bda"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:subnet/subnet-057a7458397040b90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.80.0/20",
            "id": "subnet-057a7458397040b90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc Private us-east-2a"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:subnet/subnet-0d717ca9cc33d078e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.200.96.0/20",
            "id": "subnet-0d717ca9cc33d078e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc Private us-east-2b"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:subnet/subnet-0113fa9fdd85de07c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.200.112.0/20",
            "id": "subnet-0113fa9fdd85de07c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc Private us-east-2c"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:subnet/subnet-05edee9f4d225225d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.0.0/24",
            "id": "subnet-05edee9f4d225225d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc Public us-east-2a"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:subnet/subnet-0277e0458a520598e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-0277e0458a520598e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc Public us-east-2b"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:subnet/subnet-0f128cdf225523bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-0f128cdf225523bda",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc Public us-east-2c"
            },
            "vpc_id": "vpc-0586b74fc4beb8de0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:683326455360:vpc/vpc-0586b74fc4beb8de0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-01cc645e8fddc774e",
            "default_route_table_id": "rtb-0a18b2414b03b642a",
            "default_security_group_id": "sg-0e4e8d484bc993170",
            "dhcp_options_id": "dopt-84c830ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0586b74fc4beb8de0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a18b2414b03b642a",
            "owner_id": "683326455360",
            "tags": {
              "Name": "core-vpc"
            }
          }
        }
      ]
    }
  ]
}